# mysqlpp

./: CMakeLists.txt  README.md  mysqlpp.vix  vix.json
examples/: basic_connect.cpp  insert_and_select.cpp  transaction.cpp
include/mysqlpp/: client.hpp  exception.hpp  mysqlpp.hpp
tests/: test_basic.cpp
